--- a/build.xml
+++ b/build.xml
@@ -202,7 +202,7 @@
   <property environment="env"/>
   <property name="name" value="sqoop" />
   <property name="Name" value="Sqoop" />
-  <property name="version" value="1.4.5-SNAPSHOT" />
+  <property name="version" value="1.4.5" />
 
   <!-- The last version released. -->
   <property name="oldversion" value="1.4.4" />
