SQOOP-777: Sqoop2: Implement intermediate data format representation policy
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -45,6 +45,11 @@ limitations under the License.
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
