--- a/execution/mapreduce/pom.xml
+++ b/execution/mapreduce/pom.xml
@@ -52,6 +52,10 @@ limitations under the License.
       <artifactId>mockito-all</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
 
     <!-- See profiles for Hadoop specific dependencies -->
 
