SQOOP-1376: Sqoop2: From/To: Refactor connector interface
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -30,9 +30,10 @@ object-name.help = Non unique name of the entity to help you remember \
 #
 args.function.unknown = The specified function "{0}" is not recognized.
 args.xid_missing = Required argument --xid is missing.
+args.fxid_missing = Required argument --fxid is missing.
+args.txid_missing = Required argument --txid is missing.
 args.jid_missing = Required argument --jid is missing.
 args.cid_missing = Required argument --cid is missing.
-args.type_missing = Required argument --type is missing.
 args.name_missing = Required argument --name is missing.
 args.value_missing = Required argument --value is missing.
 
@@ -79,7 +80,7 @@ create.job_successful = New job was successfully created with validation \
   status {0}  and persistent id {1}
 ## Creating messages
 create.creating_conn = Creating connection for connector with id {0}
-create.creating_job = Creating job for connection with id {0}
+create.creating_job = Creating job for connections with id {0} and {1}
 
 #
 # Delete command
@@ -193,8 +194,9 @@ table.header.id = Id
 table.header.name = Name
 table.header.version = Version
 table.header.class = Class
-table.header.type = Type
 table.header.connector = Connector
+table.header.connector.from = From Connector
+table.header.connector.to = To Connector
 table.header.jid = Job Id
 table.header.eid = External Id
 table.header.status = Status
@@ -205,7 +207,6 @@ table.header.enabled = Enabled
 formdisplayer.supported_job_types = Supported job types
 formdisplayer.connection = Connection
 formdisplayer.job = Job
-formdisplayer.forms_jobtype = Forms for job type
 formdisplayer.form = form
 formdisplayer.name = Name
 formdisplayer.label = Label
