SQOOP-1424: Sqoop2: Simplify SqoopCommand in shell package

--- a/pom.xml
+++ b/pom.xml
@@ -320,6 +320,11 @@ limitations under the License.
         <version>${json-simple.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.sqoop.submission</groupId>
         <artifactId>sqoop-submission-mapreduce</artifactId>
         <version>${project.version}</version>
