--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -17,7 +17,7 @@
 
 ############################
 # Security Form
-#
+#############################
 object-name.label = Name
 object-name.help = Non unique name of the entity to help you remember \
                    it's purpose
@@ -25,10 +25,13 @@ object-name.help = Non unique name of the entity to help you remember \
 
 #############################
 # Messages
-#
+#############################
+
+# Shared (for all commands/functions)
+shared.usage = @|bold Usage:|@ {0} {1}
+shared.unknown.function = The specified function "{0}" is not recognized.
+
 # Argument related
-#
-args.function.unknown = The specified function "{0}" is not recognized.
 args.xid_missing = Required argument --xid is missing.
 args.fxid_missing = Required argument --fxid is missing.
 args.txid_missing = Required argument --txid is missing.
@@ -36,7 +39,6 @@ args.jid_missing = Required argument --jid is missing.
 args.cid_missing = Required argument --cid is missing.
 args.name_missing = Required argument --name is missing.
 args.value_missing = Required argument --value is missing.
-
 
 ## Generic description of various ids, types etc
 prompt.conn_id = Connection ID
@@ -53,17 +55,15 @@ connection object
 prompt.fill_job_metadata = Please fill following values to create new \
 job object
 
-#
 # Update command
+update.description = Update objects in Sqoop repository
 update.conn = Updating connection with id {0}
 update.job = Updating job with id {0}
-update.usage = Usage: update {0}
 update.conn_successful = Connection was successfully updated with status {0}
 update.job_successful = Job was successfully updated with status {0}
 
-#
 # Clone command
-clone.usage = Usage: clone {0}
+clone.description = Create new object based on existing one
 clone.conn.successful = Connection was successfully created with validation \
   status {0} and persistent id {1}
 clone.job.successful = Job was successfully created with validation \
@@ -71,34 +71,28 @@ clone.job.successful = Job was successfully created with validation \
 clone.cloning_conn = Cloning connection with id {0}
 clone.cloning_job = Cloning job with id {0}
 
-#
 # Create command
-create.usage = Usage: create {0}
+create.description = Create new object in Sqoop repository
 create.conn_successful = New connection was successfully created with \
   validation status {0} and persistent id {1}
 create.job_successful = New job was successfully created with validation \
   status {0}  and persistent id {1}
-## Creating messages
 create.creating_conn = Creating connection for connector with id {0}
 create.creating_job = Creating job for connections with id {0} and {1}
 
-#
 # Delete command
-delete.usage = Usage: delete {0}
+delete.description = Delete existing object in Sqoop repository
 
-#
 # Enable command
-enable.usage = Usage: enable {0}
+enable.description = Enable object in Sqoop repository
 enable.conn_successful = Connection {0} was successfully enabled
 enable.job_successful = Job {0} was successfully enabled
 
-#
 # Disable command
-disable.usage = Usage: disable {0}
+disable.description = Disable object in Sqoop repository
 disable.conn_successful = Connection {0} was successfully disabled
 disable.job_successful = Job {0} was successfully disabled
 
-#
 # Help command
 help.usage = [<command>]
 help.description = Display this help message
@@ -114,9 +108,8 @@ help.specific_cmd_info = For help on a specific command type: \
 
 unrecognized.cmd = Unrecognized command {0}
 
-#
 # Set command
-set.usage = Usage: set {0}
+set.description = Configure various client options and settings
 set.prompt_opt_name = Client option name
 set.prompt_opt_value = New option value
 set.verbose_changed = Verbose option was changed to {0}
@@ -131,8 +124,8 @@ set.server_successful = Server is set successfully
 set.server_ignored = --host, --port or --webapp option is ignored, because --url option is given.
 
 
-show.usage = Usage: show {0}
-
+# Show command
+show.description = Display various objects and configuration options
 show.prompt_display_all_conns = Display all connections
 show.prompt_display_conn_xid = Display the connection with xid
 show.conn_usage = Usage: show connection
@@ -182,12 +175,15 @@ sqoop.shell_banner = @|green Sqoop Shell:|@ Type '@|bold help|@' or '@|bold \\h|
 sqoop.prompt_shell_loadrc = Loading resource file {0}
 sqoop.prompt_shell_loadedrc = Resource file loaded.
 
-start.usage = Usage: start {0}
+# Start command
+start.description = Start job
 start.prompt_synchronous = Wait for submission to finish
 
-stop.usage = Usage: stop  {0}
+# Stop command
+stop.description = Stop job
 
-status.usage = Usage: status {0}
+# Status command
+status.description = Display status of a job
 
 # Various Table headers
 table.header.id = Id
