SQOOP-1430: Sqoop2: From/To: Change shell to take "from" and "to"
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -33,8 +33,8 @@ shared.unknown.function = The specified function "{0}" is not recognized.
 
 # Argument related
 args.xid_missing = Required argument --xid is missing.
-args.fxid_missing = Required argument --fxid is missing.
-args.txid_missing = Required argument --txid is missing.
+args.from_missing = Required argument --from is missing.
+args.to_missing = Required argument --to is missing.
 args.jid_missing = Required argument --jid is missing.
 args.cid_missing = Required argument --cid is missing.
 args.name_missing = Required argument --name is missing.
@@ -200,7 +200,6 @@ table.header.date = Last Update Date
 table.header.enabled = Enabled
 
 #Form displayer resources
-formdisplayer.supported_job_types = Supported job types
 formdisplayer.connection = Connection
 formdisplayer.job = Job
 formdisplayer.form = form
