--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -47,55 +47,77 @@ connection.jdbcProperties.label = JDBC Connection Properties
 connection.jdbcProperties.help = Enter any JDBC properties that should be \
                    supplied during the creation of connection.
 
-# Table Form
+# From Table Form
 #
-table.label = Database configuration
-table.help = You must supply the information requested in order to create \
-                  a job object.
+fromTable.label = From database configuration
+fromTable.help = You must supply the information requested in order to create \
+                 a job object.
 
-# Schema name
-table.schemaName.label = Schema name
-table.schemaName.help = Schema name to process data in the remote database
+# From schema name
+fromTable.schemaName.label = Schema name
+fromTable.schemaName.help = Schema name to process data in the remote database
 
-# Table name
-table.tableName.label = Table name
-table.tableName.help = Table name to process data in the remote database
+# From table name
+fromTable.tableName.label = Table name
+fromTable.tableName.help = Table name to process data in the remote database
 
-# Table SQL
-table.sql.label = Table SQL statement
-table.sql.help = SQL statement to process data in the remote database
+# From table SQL
+fromTable.sql.label = Table SQL statement
+fromTable.sql.help = SQL statement to process data in the remote database
 
-# Table columns
-table.columns.label = Table column names
-table.columns.help = Specific columns of a table name or a table SQL
+# From table columns
+fromTable.columns.label = Table column names
+fromTable.columns.help = Specific columns of a table name or a table SQL
 
-# Table warehouse
-table.warehouse.label = Data warehouse
-table.warehouse.help = The root directory for data
+# From table warehouse
+fromTable.warehouse.label = Data warehouse
+fromTable.warehouse.help = The root directory for data
 
-# Stage table name
-table.stageTableName.label = Stage table name
-table.stageTableName.help = Name of the stage table to use
+# From table datadir
+fromTable.dataDirectory.label = Data directory
+fromTable.dataDirectory.help = The sub-directory under warehouse for data
 
-# Clear stage table
-table.clearStageTable.label = Clear stage table
-table.clearStageTable.help = Indicate if the stage table should be cleared
+# From table pcol
+fromTable.partitionColumn.label = Partition column name
+fromTable.partitionColumn.help = A specific column for data partition
 
-# Table datadir
-table.dataDirectory.label = Data directory
-table.dataDirectory.help = The sub-directory under warehouse for data
+# From table pcol is null
+fromTable.partitionColumnNull.label = Nulls in partition column
+fromTable.partitionColumnNull.help = Whether there are null values in partition column
 
-# Table pcol
-table.partitionColumn.label = Partition column name
-table.partitionColumn.help = A specific column for data partition
+# From table boundary
+fromTable.boundaryQuery.label = Boundary query
+fromTable.boundaryQuery.help = The boundary query for data partition
 
-# Table pcol is null
-table.partitionColumnNull.label = Nulls in partition column
-table.partitionColumnNull.help = Whether there are null values in partition column
+# To table form
+#
+toTable.label = To database configuration
+toTable.help = You must supply the information requested in order to create \
+                 a job object.
 
-# Table boundary
-table.boundaryQuery.label = Boundary query
-table.boundaryQuery.help = The boundary query for data partition
+# From schema name
+toTable.schemaName.label = Schema name
+toTable.schemaName.help = Schema name to process data in the remote database
+
+# From table name
+toTable.tableName.label = Table name
+toTable.tableName.help = Table name to process data in the remote database
+
+# From table SQL
+toTable.sql.label = Table SQL statement
+toTable.sql.help = SQL statement to process data in the remote database
+
+# From table columns
+toTable.columns.label = Table column names
+toTable.columns.help = Specific columns of a table name or a table SQL
+
+# To stage table name
+toTable.stageTableName.label = Stage table name
+toTable.stageTableName.help = Name of the stage table to use
+
+# To clear stage table
+toTable.clearStageTable.label = Clear stage table
+toTable.clearStageTable.help = Indicate if the stage table should be cleared
 
 # Placeholders to have some entities created
 ignored.label = Ignored
