SQOOP-1454: Sqoop2: From/To: Add client support for supported directions
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -137,8 +137,8 @@ show.prompt_display_all_connectors = Display all connectors
 show.prompt_display_connector_cid = Display the connector with cid
 show.connector_usage = Usage: show connector
 show.prompt_connectors_to_show = @|bold {0} connector(s) to show: |@
-show.prompt_connector_info = Connector with id {0}:\n  Name: {1} \n \
-Class: {2}\n  Version: {3}
+show.prompt_connector_info = Connector with id {0}:\n  Name: {1} \n  \
+Class: {2}\n  Version: {3}\n  Supported Directions {4}
 
 show.framework_usage = Usage: show framework
 show.prompt_framework_opts = @|bold Framework specific options: |@\nPersistent id: {0}
@@ -190,6 +190,7 @@ table.header.id = Id
 table.header.name = Name
 table.header.version = Version
 table.header.class = Class
+table.header.supported_directions = Supported Directions
 table.header.connector = Connector
 table.header.connector.from = From Connector
 table.header.connector.to = To Connector
