--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -227,5 +227,6 @@ submission.progress_not_available = Progress is not available
 submission.counters = Counters
 submission.executed_success = Job executed successfully
 submission.server_url = Server URL
-submission.from_schema = From schema
-submission.to_schema = To schema
+submission.from_schema = Source Connector schema
+submission.to_schema = Target Connector schema
+
