SQOOP-1573: Sqoop2: From/To: Fix driver labels
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/core/src/main/resources/driver-config.properties
+++ b/core/src/main/resources/driver-config.properties
@@ -19,7 +19,7 @@
 
 # Throttling From
 #
-throttthrottlingConfigling.label = Throttling resources
+throttlingConfig.label = Throttling resources
 throttlingConfig.help = Set throttling boundaries to not overload your systems
 
 throttlingConfig.numExtractors.label = Extractors
